fix(GUI): focus on bookmarks list, edit buttons + color in dark mode (PR #2297)

--- a/src/renderer/assets/styles/components/annotations.scss
+++ b/src/renderer/assets/styles/components/annotations.scss
@@ -177,8 +177,8 @@
       }
 
       svg {
-        fill: var(--color-blue);
-        color: var(--color-blue);
+        fill: var(--color-blue-alt);
+        color: var(--color-blue-alt);
       }
     }
   }
